# gin

./: .gitignore  Cargo.toml  flake.nix  justfile  mix.exs  pyproject.toml  readme.md
docs/: design.md  supported_hubs.md  ucsc_trackhubs.md
lib/: gin.ex
lib/gin/hub/: client.ex  parser.ex  track_db.ex
lib/gin/meta/: gin_meta.ex  transformer.ex  vocab.ex
lib/gin/meta/transformers/: blueprint.ex  core.ex  display.ex
lib/gin/meta/vocab/: biomaterial_type.ex  cell_type.ex  experiment_type.ex  molecule.ex  sex.ex  tissue.ex  track_type.ex
lib/gin/ontology/: obo.ex
lib/mix/tasks/: gin.audit.ex
priv/vocab/: cell_type.eterm  cell_type_common.eterm  cell_type_human.eterm  cell_type_mouse.eterm  tissue.eterm
scripts/: 01_list_hubs.sh  02_explore_hub.sh  03_fetch_bigbed.sh  04_bigbed_meta.sh
src/: main.rs
test/: gin_test.exs
test/gin/hub/: parser_test.exs  track_db_test.exs
test/gin/meta/: transformer_test.exs  vocab_test.exs
