[package]
name = "gin"
version = "0.1.0"
edition = "2024"

[dependencies]
bitvec = "1.0.1"
rand = "0.8"
tempfile = "3.10"
clap = { version = "4.6.0", features = ["derive"] }
memmap2 = "0.9"
rayon = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
wide = "0.7.33"
flate2 = "1.1.9"
rend = "0.4"
rkyv = "0.8"
indicatif = "0.18.4"
voracious_radix_sort = "1.2.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
